# DLMM-Demo-Challenge

./: CONTRIBUTING.md  LICENSE  README.md  package-lock.json  package.json
.github/: copilot-instructions.md
backend/: .env  .env.example  Cargo.toml
backend/src/: main.rs
docs/: api.md  sdk-integration.md
examples/: saros-sdk-integration.ts  telegram-bot.md
frontend/: .env.example  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/: AnalyticsCharts.tsx  Header.tsx  PortfolioSummary.tsx  PositionsList.tsx  WalletProvider.tsx
frontend/src/hooks/: useApi.ts
