[package]
name = "saros-analytics-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["json", "query"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Solana (commented out to avoid dependency conflicts for now)
# solana-client = "1.18"
# solana-sdk = "1.18"

# Saros SDK (placeholder - replace with actual crate when available)
# saros-dlmm-sdk-rs = "0.1"

# Database (optional) - commented out to avoid conflicts
# sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"], optional = true }

# Caching (optional)
# redis = { version = "0.24", optional = true }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Environment
dotenvy = "0.15"

# Crypto and math
rust_decimal = { version = "1.0", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

[features]
default = []

[[bin]]
name = "server"
path = "src/main.rs"
